--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/yotoqxona
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
-#upload.folder = /Users/Dell/Desktop
+
 upload.folder = C:/Users/User/Desktop/Yotoqxona-gradle/src/files
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
